refactor : stream 메소드 수정